Added (short) introductions to sections in Problem Analysis.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -6,10 +6,29 @@
 	of the problems and possible solutions that can be used in order to 
 	solve these problems. 
 	
+	One of the core challenges of the project is the use of Augmented Reality 
+	(AR) technology. An analysis of the available options to implement this 
+	functionality is given in section \ref{sec:ar}. Another important challenge
+	is improving situational awareness, which is discussed in section 
+	\ref{sec:awareness}. The last challenge is the creation of interdependence 
+	between players in such a way that requires collaboration from all players.
+	This challenge is analyzed in section \ref{sec:interdependence}. 
+	
+	Lastly, a conclusion based on the analyses of these challenges is given in
+	section \ref{sec:analysisconclusion}.
+	
 	\section{Augmented Reality (AR) Functionality} \label{sec:ar}
 		% AR is a core element in the project. As such, we need to compare
 		% various AR hardware devices and corresponding ways to implement
 		% AR functionality for each device.
+		Augmented Reality (AR) is a core aspect of the problem formulation. 
+		As such, careful analysis has to be done as to how the AR functionality
+		can be best implemented to fully address the context of this project.
+		
+		We consider two choices for implementing AR functionality: The META One,
+		an optical see-through device (\ref{ssec:metaone}), and the Oculus Rift 
+		Virtual Reality glasses in conjunction with mounted cameras 
+		(\ref{ssec:oculusrift}).
 	
 		% Hardware devices to consider:
 		\subsection{META One} \label{ssec:metaone}
@@ -47,11 +66,20 @@
 		% Improving situational awareness is part of the main goal of the project.
 		% We should indicate the steps needed to achieve this, which can be based 
 		% on (possibly) a large range of scientific articles.
+		This project is about exploring the different perception of situational 
+		awareness, presence and workload in a physical and an AR environment 
+		(see chapter \ref{cha:problem}). As such, situational awareness plays a 
+		key role in this project.
+		
 	
 	\section{Interdependence between players} \label{sec:interdependence}
 		% Creating interdependence between players requires them to work together.
 		% This can be done in several ways. We need to elaborate on the various ways
 		% in which this can be achieved.
+		The problem formulation states that the game is to be employed as an 
+		approximation of collaboratively solving complex problems. In order to
+		motivate players of the game to collaborate, there is a need to create
+		a form of interdependence amongst the players. 
 		
 	\section{Analysis Conclusions} \label{sec:analysisconclusion}
 		% Provides the coices we made for the abovementioned problems along with a short
