Added some references in the Proposed Solution chapter.
These references refer to appropriate sections in the Problem Analysis chapter.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -29,10 +29,10 @@
 	powerful beams. Other optical components like beam splitters can also be 
 	introduced.
 	
-	The game is designed to increase situational awareness by requiring the 
-	cooperation between the physically co-located players and the physically 
-	remote player(s). It does so by dividing abilities required for solving
-	the puzzles amongst all players as follows:
+	The game is designed to stimulate cooperation between the physically 
+	co-located players and the physically remote player(s). It does so by 
+	dividing abilities required for solving the puzzles amongst all players 
+	as follows:
 	
 	\begin{itemize}
 		\item Physically co-located players each get only a part of the 
@@ -49,7 +49,7 @@
 	\end{itemize}
 
 	Because of this division of abilities, there is an interdependence 
-	between all players, regardless of whether these players are physically 
-	co-located or not. This replicates the interdependence that exists in 
-	the crime scene example as given in the problem formulation (section 
-	\ref{cha:problem}).
+	between all players (see section \ref{sec:interdependence}), regardless of
+	whether these players are physically co-located or not. This replicates the 
+	interdependence that exists in the crime scene example as given in the 
+	problem formulation (see chapter \ref{cha:problem}).
