Added Virtual Co-location section to Problem Analysis.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -81,6 +81,12 @@
 		motivate players of the game to collaborate, there is a need to create
 		a form of interdependence amongst the players. 
 		
+	\section{Virtual Co-location} \label{sec:virtualcolocation}
+		% Allowing phsyically remote players to play the game, we need to establish
+		% some idea of virtual co-location. This includes the virtualization of the 
+		% game world as well as the networking functionality required to establish
+		% the actual connection.
+		
 	\section{Analysis Conclusions} \label{sec:analysisconclusion}
 		% Provides the coices we made for the abovementioned problems along with a short
 		% motivation based on the above analysis.
