Wrote a simple abtract for the Research Report.

--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -18,7 +18,10 @@
 \maketitle
 
 \begin{abstract}
-%TODO: Write abstract
+This report provides a detailed analysis of the problem formulation and a 
+proposal for a product that aims at solving that problem. This document 
+focuses on the research that has been done in analyzing the problem and the 
+results of that research.
 \end{abstract}
 
 \tableofcontents
