--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -80,6 +80,14 @@
 		approximation of collaboratively solving complex problems. In order to
 		motivate players of the game to collaborate, there is a need to create
 		a form of interdependence amongst the players. 
+		\subsection{Reasons to co-operate}
+			The main reason to co-operate is the asymmetry of abilities between
+			the players involved. For example: the physically co-located players
+			have the ability to put down mirrors, and the virtually co-located
+			players can then rotate the mirrors. Furthermore, information
+			asymmetry can also be implemented, for example by allowing only the
+			virtually co-located players to see the obstacles. Because of physical
+			separation, asymmetry should be focused on physical abilities.
 		
 	\section{Virtual Co-location} \label{sec:virtualcolocation}
 		Establishing virtual co-location is required to allow physically remote players
