Nog iets verder uitgewerkt.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -79,7 +79,9 @@
 		The problem formulation states that the game is to be employed as an 
 		approximation of collaboratively solving complex problems. In order to
 		motivate players of the game to collaborate, there is a need to create
-		a form of interdependence amongst the players. 
+		a form of interdependence amongst the players. One way to do this is to 
+		create an asymmetry between either the information that the players have or
+		an asymmetry of abilities, as explained in the following subsection. 
 		\subsection{Reasons to co-operate}
 			The main reason to co-operate is the asymmetry of abilities between
 			the players involved. For example: the physically co-located players
