Added pros and cons of META One glasses.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -36,6 +36,20 @@
 			%       - Has a limited Field-of-View (around 35 degrees)
 			%          - May interfere with the experience of the game.
 			%       - Optical see-through glasses means AR works out of the box.
+			
+			The META One glasses are optical see-through glasses. Optical 
+			see-through glasses work by projecting a virtual image on top of the
+			world you see, effectively implementing a 3D AR exprience.
+			
+			Because the META One is an optical see-through device that also 
+			features motion tracking, AR can be implemented simply by 
+			projecting an image against a black background to the glasses.
+			
+			A big drawback of the available META One glasses is their 
+			Field-of-View, which is 35 degrees. This Field-of-View is way lower
+			than the Field-of-View of a person, which may have a negative impact 
+			on the game experience.
+			
 		\subsection{Oculus Rift} \label{ssec:oculusrift}
 			%   - Oculus Rift + mounted cameras (http://oculusvr.com/)
 			%       - High Field-of-View (100 degrees)
