Extra beschrijving toegevoegd.

--- a/Reports/Research Report/ProblemFormulation.tex
+++ b/Reports/Research Report/ProblemFormulation.tex
@@ -15,6 +15,11 @@
 	It has to be possible to play the game with at least three players: At 
 	least two players are present at the same location (physically 
 	co-located). At least one player is physically remote but virtually 
-	co-located \cite{bepsys}.
+	co-located \cite{bepsys}. The game itself should also be unable to be
+	completed without either the physically co-located players or the 
+	virtually co-located players, however this constraint could be relaxed
+	to allow a higher playability of the game (because it would be nice to
+	play the game without having to search for a virtually co-located player,
+	for example).
 	
 	%TODO Add our interpretation to avoid ambiguities
