setting other game ideas

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -1,8 +1,9 @@
-\chapter{Proposed Solution} \label{cha:solution}
+\chapter{Proposed Solutions} \label{cha:solution}
 	% A description of the proposed solution, including gameplay elements. 
 	% The description is taken from the Product Plan. This section also 
 	% motivates why the proposed solution is a good solution.
-	
+
+{subsection laser mirror}
 	%TODO: Add references to Problem Analysis chapter where appropriate.
 	The goal of the game is to solve a puzzle by controlling laser beams 
 	using mirrors in such a way that a predefined target is hit. The game 
@@ -23,7 +24,7 @@
 	
 	The game provides various different types of mirrors with different 
 	properties, allowing for more complex puzzles. One example of such a 
-	mirror is a colored mirror, and then require the target is hit with the 
+	mirror is a colored mirror, and then require the target is hit wi                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   th the 
 	right (combination of) colors. Another way to make puzzles more complex 
 	is requiring that the players combine beams together to create more 
 	powerful beams. Other optical components like beam splitters can also be 
@@ -53,3 +54,7 @@
 	whether these players are physically co-located or not. This replicates the 
 	interdependence that exists in the crime scene example as given in the 
 	problem formulation (see chapter \ref{cha:problem}).
+
+{subsection platformer}
+{subsection fps}
+{subsection tower defense}
