--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -55,14 +55,49 @@
 	interdependence that exists in the crime scene example as given in the 
 	problem formulation (see chapter \ref{cha:problem}).
 
-\section{Platformer}
-The game starts with the avatar of the remote player appearing on the table and a goal appearing above the table. The local player has a pile of blocks, each of these blocksexists both in the virtual and real world. 
-Inside the virtual world a number of pre existing structres and obstacles exist making it harder for the remote player to move around. 
-The local and remote player must work together in order to get the remote player his avatar to the goal. 
-
+\section{Platformer}{}
+The game starts with the avatar of the remote player appearing
+ on the table and a goal appearing above the table. The local
+  player has a pile of blocks, each of these blocksexists both
+   in the virtual and real world. 
+Inside the virtual world a number of pre existing structres and
+ obstacles exist making it harder for the remote player to move around. 
+The local and remote player must work together in order to get the
+ remote player his avatar to the goal. 
+Team work is heavily encouraged due to this form of ability 
+asymmetry and shared goal.  
 
 \section{FPS Survival game}
-Simulair to the platformer the remote playesr are repressented as a avatar controlled from the first person perspective and the local player can place blocks. What is different however is that the goal of the game is no longer to reach a given location but to work together in order to protect a given structure from hostile entities. Doing so requires the cooperation of the remote players who can most easily damage the hostile entities and the local players who can hinder the momevement 
+Simulair to the platformer the remote players are represented
+ as a avatar controlled from the first person perspective and 
+ the local player can place blocks. What is different however 
+ is that the goal of the game is no longer to reach a given 
+ location but to work together in order to protect a given 
+ structure from hostile entities. Doing so requires the 
+ cooperation of the remote players who can most easily damage 
+ the hostile entities and the local players who can hinder the
+ movement. Monsters continue to grow stronger until they eventually 
+ overwhelm the players. 
+The difference between the abilities of a remote player and
+a local player give rise to an ability asymmetry and the fact 
+that the monsters keep getting stronger means that eventually 
+there will also be a difficulty overload forcing extra 
+team work. 
 
-\section{Tower defense game}
-The local players start each with a number of towers each of which have certain strengths and abilities. They must place these towers on a table in front of them. What they cannot but the remote player can see is what paths a number of hostile entities will take in order to attack their base. They must therefor coperate to place the towers in such positions as to maximalize the damage to these hostile entities by communicating the ideal locations of the towers and paths. 
+\section{Tower defense }
+The local players start each with a number of towers each of 
+which have certain strengths and abilities. They must place
+ these towers on a table in front of them. What they cannot
+ but the remote player can see is what paths a number of
+ hostile entities will take in order to attack their base.
+They must therefor cooperate to place the towers in such 
+ positions as to maximize the damage to these hostile 
+ entities by communicating the ideal locations of the 
+ towers and paths that the hostile entities will take. 
+ 
+ The problem with this idea is that it will very likely create a 
+ "puppet master" situation where the remote player takes charge
+ of the whole situation and the other players do net get a 
+ say in what is going to happen. This could be avoided by a 
+ number of extra abilities. This game shows heavy 
+ information and ability asymmetry. 
