Cleaned up the proposed solution section, and added a conclusion.

--- a/Reports/Research Report/ProposedSolution.tex
+++ b/Reports/Research Report/ProposedSolution.tex
@@ -24,11 +24,10 @@
 	
 	The game provides various different types of mirrors with different 
 	properties, allowing for more complex puzzles. One example of such a 
-	mirror is a colored mirror, and then require the target is hit wi                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             th the 
+	mirror is a colored mirror, and then require the target is hit with the
 	right (combination of) colors. Another way to make puzzles more complex 
 	is requiring that the players combine beams together to create more 
-	powerful beams. Other optical components like beam splitters can also be 
-	introduced.
+	powerful beams. Other optical components like beam splitters can also be introduced.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 	
 	The game is designed to stimulate cooperation between the physically 
 	co-located players and the physically remote player(s). It does so by 
@@ -55,21 +54,22 @@
 	interdependence that exists in the crime scene example as given in the 
 	problem formulation (see chapter \ref{cha:problem}).
 
-\section{Platformer}{}
+\section{Platformer}
 The game starts with the avatar of the remote player appearing
  on the table and a goal appearing above the table. The local
-  player has a pile of blocks, each of these blocksexists both
+  players have a pile of blocks, each of these blocks exists both
    in the virtual and real world. 
-Inside the virtual world a number of pre existing structres and
+Inside the virtual world a number of pre-existing structures and
  obstacles exist making it harder for the remote player to move around. 
 The local and remote player must work together in order to get the
- remote player his avatar to the goal. 
+ virtual avatar to the goal. 
 Team work is heavily encouraged due to this form of ability 
-asymmetry and shared goal.  
+asymmetry and shared goal. Ability asymmetry is caused by the remote
+player not being able to place any blocks.
 
 \section{FPS Survival game}
-Simulair to the platformer the remote players are represented
- as a avatar controlled from the first person perspective and 
+Similar to the platformer, the remote players are represented
+ as avatars controlled from the first person perspective and 
  the local player can place blocks. What is different however 
  is that the goal of the game is no longer to reach a given 
  location but to work together in order to protect a given 
@@ -85,19 +85,26 @@ there will also be a difficulty overload forcing extra
 team work. 
 
 \section{Tower defense }
-The local players start each with a number of towers each of 
+The local players start off with a number of towers each 
 which have certain strengths and abilities. They must place
  these towers on a table in front of them. What they cannot
  but the remote player can see is what paths a number of
  hostile entities will take in order to attack their base.
-They must therefor cooperate to place the towers in such 
- positions as to maximize the damage to these hostile 
- entities by communicating the ideal locations of the 
+They must therefore cooperate to place the towers on the right 
+ positions to be able to defeat the enemies before they escape
+ by communicating the ideal locations of the 
  towers and paths that the hostile entities will take. 
  
  The problem with this idea is that it will very likely create a 
- "puppet master" situation where the remote player takes charge
+ "puppet master" scenario where the remote player takes charge
  of the whole situation and the other players do net get a 
  say in what is going to happen. This could be avoided by a 
  number of extra abilities. This game shows heavy 
  information and ability asymmetry. 
+ 
+ \section{The chosen idea}
+ The idea that is chosen is the mirror game idea. The reason for this
+ decision is that it is a relatively simple idea, it can create hard
+ to solve puzzles, and extra complexity can easily be added. It also
+ prevents a "puppet master" scenario by giving both types of players
+ about half of the abilities required for solving the game.
