Added an \include for Thijs.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -147,5 +147,6 @@
 		% the actual connection.
 		
 	\section{Analysis Conclusions} \label{sec:analysisconclusion}
+		\include{AnalysisConclusion.tex}
 		% Provides the coices we made for the abovementioned problems along with a short
 		% motivation based on the above analysis.
