--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -124,14 +124,16 @@
 		a form of interdependence amongst the players. One way to do this is to 
 		create an asymmetry between either the information that the players have or
 		an asymmetry of abilities, as explained in the following subsection. 
-		\subsection{Reasons to co-operate}
+		\subsection{Asymmetry of abilities}
 			The main reason to co-operate is the asymmetry of abilities between
-			the players involved. For example: the physically co-located players
-			have the ability to put down mirrors, and the virtually co-located
-			players can then rotate the mirrors. Furthermore, information
-			asymmetry can also be implemented, for example by allowing only the
-			virtually co-located players to see the obstacles. Because of physical
-			separation, asymmetry should be focused on physical abilities.
+			the players involved. For example: physically co-located players can
+			alter the game world, while virtually co-located players can guide
+			characters to a certain goal utilizing the altered game environment.
+			One thing to note is that a "puppet master" scenario should be avoided.
+			This scenario happens when one player can do everything except for a
+			few required tasks, and uses the other players to execute these tasks.
+			In this case, the other players will have less involvement with the
+			shared goal, and the amount of co-operation will go down.
 		
 	\section{Virtual Co-location} \label{sec:virtualcolocation}
 		Establishing virtual co-location is required to allow physically remote players
