Started working on information asymmetry.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -134,6 +134,11 @@
 			few required tasks, and uses the other players to execute these tasks.
 			In this case, the other players will have less involvement with the
 			shared goal, and the amount of co-operation will go down.
+		\subsection{Asymmetry of information}
+			Asymmetry of information could be used as another reason for the players
+			to co-operate. It means that both types of players (both the physically
+			co-located and the virtually co-located) have different, separate, parts
+			of the information required to complete the game.
 		
 	\section{Virtual Co-location} \label{sec:virtualcolocation}
 		Establishing virtual co-location is required to allow physically remote players
