Added a description of Situational Awareness to Problem Analysis.
Also, Atom insisted on normalizing line endings and did so without
my consent.

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -1,13 +1,21 @@
 
 % The BEPSys page of the project
 %   Assuming here that Stefan Lukosh is the author of the entry,
-%   otherwise we have no author to reference to (which, in 
-%   turn, will prevent sorting our bibliography and cause 
+%   otherwise we have no author to reference to (which, in
+%   turn, will prevent sorting our bibliography and cause
 %   problems with APA-style references).
 @misc{bepsys,
 title  = "Collaborative augmented reality tower game",
 author = "S. G. Lukosh",
-year   = "2015",
-note   = "\url{http://bepsys.herokuapp.com/projects/view/82}, 
+year   = 2015,
+note   = "\url{http://bepsys.herokuapp.com/projects/view/82},
           Accessed 23-April-2015"
+}
+
+% A book describing situational awareness.
+@book{endsley,
+title     = "Designing for situational awareness: An approach to user-centered design",
+author    = "M.R. Endsley, B. Bolte, D.G. Jones",
+publisher = "Taylor and Francis",
+year      = 2003
 }
