--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -138,7 +138,10 @@
 			Asymmetry of information could be used as another reason for the players
 			to co-operate. It means that both types of players (both the physically
 			co-located and the virtually co-located) have different, separate, parts
-			of the information required to complete the game.
+			of the information required to complete the game. in this case, a 
+			"puppet master" scenario should also be avoided. Such a scenario can occur
+			here when one type of player has nearly all of the information or can
+			infer nearly all information.
 		
 	\section{Virtual Co-location} \label{sec:virtualcolocation}
 		Establishing virtual co-location is required to allow physically remote players
