Reorganized problem analysis.

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -152,7 +152,7 @@
 			here when one type of player has nearly all of the information or can
 			infer nearly all information.
 		
-	\section{Virtual Co-location} \label{sec:virtualcolocation}
+	\include{VirtualCoLocation.tex}
 		Establishing virtual co-location is required to allow physically remote players
 		to play the game together. As such, both the virtualization of the game world and
 		the networking are considered in virtually co-locating physically remote players.
