--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -122,6 +122,15 @@
 		fully understand the situation, and be able to predict what is going to
 		happen next. This also includes understanding any risks the situation brings.
 
+		Now that the concept of situational awareness has been defined, the
+		importance of situational awareness for this project needs to be considered.
+		This project aims to approximate a situation in which the players need to
+		collaboratively solve complex problems, as they occur in crime scene
+		investigations (see \ref{cha:problem}). On a crime scene, the investigator
+		needs to analyse and understand the situation, so there is a need for
+		situational awareness in the problem description. The game will need to
+		replicate a similar need for situational awareness to be an accurate
+		approximation of the context of this project.
 
 	\section{Interdependence between players} \label{sec:interdependence}
 		% Creating interdependence between players requires them to work together.
@@ -132,19 +141,7 @@
 		motivate players of the game to collaborate, there is a need to create
 		a form of interdependence amongst the players. One way to do this is to
 		create an asymmetry between either the information that the players have or
-<<<<<<< HEAD
 		an asymmetry of abilities, as explained in the following subsection.
-		\subsection{Reasons to co-operate}
-			The main reason to co-operate is the asymmetry of abilities between
-			the players involved. For example: the physically co-located players
-			have the ability to put down mirrors, and the virtually co-located
-			players can then rotate the mirrors. Furthermore, information
-			asymmetry can also be implemented, for example by allowing only the
-			virtually co-located players to see the obstacles. Because of physical
-			separation, asymmetry should be focused on physical abilities.
-
-=======
-		an asymmetry of abilities, as explained in the following subsection. 
 		\subsection{Asymmetry of abilities}
 			The main reason to co-operate is the asymmetry of abilities between
 			the players involved. For example: physically co-located players can
@@ -160,8 +157,7 @@
 			to co-operate. It means that both types of players (both the physically
 			co-located and the virtually co-located) have different, separate, parts
 			of the information required to complete the game.
-		
->>>>>>> bb1db796d9f5cb0211c203036c54b2303b49df1b
+
 	\section{Virtual Co-location} \label{sec:virtualcolocation}
 		Establishing virtual co-location is required to allow physically remote players
 		to play the game together. As such, both the virtualization of the game world and
