Made a small improvement in Problem Analysis (Situational Awareness).

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -126,10 +126,10 @@
 		importance of situational awareness for this project needs to be considered.
 		This project aims to approximate a situation in which the players need to
 		collaboratively solve complex problems, as they occur in crime scene
-		investigations (see \ref{cha:problem}). On a crime scene, the investigator
-		needs to analyse and understand the situation, so there is a need for
-		situational awareness in the problem description. The game will need to
-		replicate a similar need for situational awareness to be an accurate
+		investigations (see chapter \ref{cha:problem}). On a crime scene, the
+		investigator needs to analyse and understand the situation, so there is a
+		need for situational awareness in the problem description. The game will need
+		to replicate a similar need for situational awareness to be an accurate
 		approximation of the context of this project.
 
 	\section{Interdependence between players} \label{sec:interdependence}
