--- a/Reports/Research Report/VirtualCoLocation.tex
+++ b/Reports/Research Report/VirtualCoLocation.tex
@@ -25,9 +25,12 @@ Establishing virtual co-location is required to allow physically remote players
 		works regardless of what is visible but requires accurate trilocation which works
 		can be quite hard to do without building a heavy rig. 
 		Of course a combination of several of the above methods is also possible. 
-
-		Then there is the matter of making the players "feel" that they are in the 
-		same location. One obvious method might be to put an oculus on the remote player(s) and let 
+	
+		In the end the goal of all of this is of course to make the remote player feel 
+		as if he is in the same location as the local player and make the local player feel 
+		as if the remote player is really with him. So first of all we can look at the 
+		visualization for the remote player:
+		One obvious method might be to put an oculus on the remote player(s) and let 
 		them see through the eyes of the local player(s), however this is likely to cause nausea. 
 		Of course we can do away with the oculus but that might result in relative pasivism from 
 		the remote players as they feel they cannot 
@@ -45,6 +48,13 @@ Establishing virtual co-location is required to allow physically remote players
 		a better attention to the situation at the cost of having the map the scene fully 
 		in the virtual world. 
 		
+		We should also look at how we can make the local player feel as if the remote 
+		player is with him. One method is to heavily encourage communication. If you 
+		are talking with someone it is hard to forget their existence. This can be 
+		encouraged by providing appropriate communication channels such as voice or text 
+		chat. Another important thing is that the remote player must visibly be doing something
+		this can be strengthened by giving him an avatar and by making his actions visibly 
+		change the world. 
 		% Allowing phsyically remote players to play the game, we need to establish
 		% some idea of virtual co-location. This includes the virtualization of the
 		% game world as well as the networking functionality required to establish
