Add META ONE advantage

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -49,6 +49,10 @@
 			Field-of-View, which is 35 degrees. This Field-of-View is way lower
 			than the Field-of-View of a person, which may have a negative impact 
 			on the game experience.
+
+			One of the advantages of this device is that the SDK has tracking
+			and gesture recognition built-in. That allows us to focus on just
+			the gameplay aspects.
 			
 		\subsection{Oculus Rift} \label{ssec:oculusrift}
 			%   - Oculus Rift + mounted cameras (http://oculusvr.com/)
