Fixed some spelling errors in VirtualCoLocation.tex

--- a/Reports/Research Report/VirtualCoLocation.tex
+++ b/Reports/Research Report/VirtualCoLocation.tex
@@ -25,7 +25,7 @@
 					within their screen or if it does not matter if there is no augmentation needed if they
 					cannot see a marker.
 		\item Object recognition which tracks the locations of objects in the scene,
-		      this method only wrks if there are a number of reasonably stable objects
+		      this method only works if there are a number of reasonably stable objects
 					within the player's vision.
 		\item Combining the output of a compass, a gyroscope and trilocations. This is
 		      works regardless of what is visible but requires accurate trilocation which works
@@ -39,9 +39,9 @@
 	visualization for the remote player:
 	One obvious method might be to put an oculus on the remote player(s) and let
 	them see through the eyes of the local player(s), however this is likely to cause nausea.
-	Of course we can do away with the oculus but that might result in relative pasivism from
-	the remote players as they feel they cannot
-	even control their own view while not being forced to watch what the other player does.
+	Of course we can do away with the oculus but that might result in relative passivism from
+	the remote players as they feel they cannot even control their own view while not being
+	forced to watch what the other player does.
 
 	We can also let the remote player control one or more avatars within the game world
 	and view these through either oculus or screen. This would keep the remote player
