Worked on conclusion, still need to elaborate on AR tech.

--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -6,8 +6,10 @@ of both the remote and the local players, as they both have abilities necessary 
 achieving the goal, but they cannot achieve it on their own (although this could be relaxed
 to make the game more playable). Also, it is still a challenging project, because of the
 technical challenge of integrating VR hardware and recognition of markers with the game
-world.  
+world. Additional complexity, such as colored laser beams/targets, beam splitters, beam mergers
+etc. could also be implemented to increase the technical challenge of the problem.
 	% Summarizes the Research Report and provides 
 	% an overview and conclusion of the technologies 
 	% we're going to use.
+	% TODO AR tech elaboration.
 	
