Add evaluation of UART

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -100,7 +100,18 @@
 				%       - Seems easy to use (comes with examples)
 				%       - Built for Unity
 				%       - Last change to SVN repo was in 2011.
+				Unity AR Toolkit (UART) is a project by researchers at the
+				Georgia Institute of Technology to develop a set of plugins for
+				Unity that make it easy to build augmented reality applications.
 
+				Unfortunately the project was abandoned in 2011 and the tracking
+				library it's based on (ARToolKitPlus) was abandoned in 2006. The
+				documentation is also severely lacking. The camera also needs to
+				be calibrated to work with it.
+
+				The one advantage of this library is that it moves the 3D
+				objects by default, instead of the camera. That may make it
+				easier to reconstruct the world with its mirrors in Unity.
 
 			\subsubsection{Metaio} \label{sssec:metaio}
 				%   - Metaio (http://www.metaio.com/)
