Finish UART section

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -19,3 +19,11 @@ author    = "M.R. Endsley, B. Bolte, D.G. Jones",
 publisher = "Taylor and Francis",
 year      = 2003
 }
+
+@misc{uart,
+title  = "Unity AR Toolkit",
+author = "B. MacIntyre",
+year   = 2012,
+note   = "\url{https://research.cc.gatech.edu/uart/content/about},
+          Accessed 28-April-2015"
+}
