Added an article about collaboration in games.
This may be useful for the Problem Analysis.

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -19,3 +19,10 @@ author    = "M.R. Endsley, B. Bolte, D.G. Jones",
 publisher = "Taylor and Francis",
 year      = 2003
 }
+
+% An article describing collaboration in games.
+@article{zagal,
+title  = "Collaborative games: lessons learned from board games.",
+author = "Zagal, J.P., Rick, J., Hsi, I.",
+year   = 2006
+}
