--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -50,10 +50,11 @@
 			than the Field-of-View of a person, which may have a negative impact
 			on the game experience.
 
-			One of the advantages of this device is that the SDK has tracking
-			and gesture recognition built-in. That allows us to focus on just
-			the gameplay aspects.
-			
+			One of the advantages of this device is that the Software Development
+			Kit (SDK) that comes with the glasses has tracking and gesture
+			recognition built-in. That allows us to focus on just the gameplay
+			aspects.
+
 		\subsection{Oculus Rift} \label{ssec:oculusrift}
 			%   - Oculus Rift + mounted cameras (http://oculusvr.com/)
 			%       - High Field-of-View (100 degrees)
