--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -78,6 +78,13 @@
 			Getting the Rift see-through functionality working in Unity on its
 			own and the augmented reality functionality on its own is not a
 			challenge.
+			
+			The advantage of the Oculus rift camera rig is that it grands complete control
+			over the screen allowing us to completely block certain regions of view, another advantage is that the field of view of the virtual world is the same as that of the 
+			physical world. Disadvantages are that we must be careful not to induce any extra
+			latency because that would result in the movements of the head and of the view no longer matching up, another disadvantage is that because the cameras are mounted on the front of the Oculus the field of view of the physical world is limited. 
+			
+			
 
 			\subsubsection{Vuforia} \label{sssec:vuforia}
 				%   - Vuforia (http://vuforia.com/ and http://developer.vuforia.com/)
