--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -6,7 +6,7 @@
 %   problems with APA-style references).
 @misc{bepsys,
 title  = "Collaborative augmented reality tower game",
-author = "S. G. Lukosh",
+author = "S.G. Lukosh",
 year   = 2015,
 note   = "\url{http://bepsys.herokuapp.com/projects/view/82},
           Accessed 23-April-2015"
@@ -15,7 +15,7 @@ note   = "\url{http://bepsys.herokuapp.com/projects/view/82},
 % A book describing situational awareness.
 @book{endsley,
 title     = "Designing for situational awareness: An approach to user-centered design",
-author    = "M.R. Endsley, B. Bolte, D.G. Jones",
+author    = "M.R. Endsley and B. Bolte and D.G. Jones",
 publisher = "Taylor and Francis",
 year      = 2003
 }
@@ -23,7 +23,7 @@ year      = 2003
 % An article describing collaboration in games.
 @article{zagal,
 title  = "Collaborative games: lessons learned from board games.",
-author = "Zagal, J.P., Rick, J., Hsi, I.",
+author = "J.P. Zagal and J. Rick and I. Hsi",
 year   = 2006
 }
 @misc{uart,
