Add Metaio section

--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -117,7 +117,14 @@
 			\subsubsection{Metaio} \label{sssec:metaio}
 				%   - Metaio (http://www.metaio.com/)
 				%       - Mainly oriented towards mobile phones, so may not be suitable for this project
+				Metaio is a well-supported project, much like Vuforia. The
+				difference is that it has native support for see-through stereo
+				glasses, which makes it well suitable for both the META One and
+				Oculus Rift solution.
 
+				Unlike any of the other solutions, this frameworks works
+				natively on Unity 64-bit. It does have the limit of only working
+				with OpenGL, but we don't expect that to be a problem.
 
 		%   - ... <Add more as needed>
 
