--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -1,15 +1,17 @@
 \chapter{Conclusion} \label{cha:conclusion}
-In short, the mirror game seems the best solution to the problem. It is a viable project
-to create in the given time frame, it is a challenging puzzle game even when playing a 
-different version of it (a single-player version) on your own, and it taxes the communication
-of both the remote and the local players, as they both have abilities necessary for
-achieving the goal, but they cannot achieve it on their own (although this could be relaxed
-to make the game more playable). Also, it is still a challenging project, because of the
-technical challenge of integrating VR hardware and recognition of markers with the game
-world. Additional complexity, such as colored laser beams/targets, beam splitters, beam mergers
-etc. could also be implemented to increase the technical challenge of the problem.
-	% Summarizes the Research Report and provides 
-	% an overview and conclusion of the technologies 
+	% Summarizes the Research Report and provides
+	% an overview and conclusion of the technologies
 	% we're going to use.
-	% TODO AR tech elaboration.
-	
+	In short, the mirror game seems the best solution to the problem. It is a
+	viable project to create in the given time frame, it is a challenging puzzle
+	game even when playing a different version of it (a single-player version) on
+	your own, and it taxes the communication of both the remote and the local
+	players, as they both have abilities necessary for achieving the goal, but
+	they cannot achieve it on their own (although this could be relaxed to make
+	the game more playable). Also, it is still a challenging project, because of
+	the technical challenge of integrating VR hardware and recognition of markers
+	with the game world. Additional complexity, such as colored laser beams or
+	targets, beam splitters, beam mergers and so on could also be implemented to
+	increase the technical challenge of the problem.
+
+	% TODO AR tech elaboration.	
