--- a/Reports/Research Report/Conclusion.tex
+++ b/Reports/Research Report/Conclusion.tex
@@ -5,9 +5,13 @@ different version of it (a single-player version) on your own, and it taxes the 
 of both the remote and the local players, as they both have abilities necessary for
 achieving the goal, but they cannot achieve it on their own (although this could be relaxed
 to make the game more playable). Also, it is still a challenging project, because of the
-technical challenge of integrating VR hardware and recognition of markers with the game
+technical challenge of integrating AR hardware and recognition of markers with the game
 world. Additional complexity, such as colored laser beams/targets, beam splitters, beam mergers
-etc. could also be implemented to increase the technical challenge of the problem.
+etc. could also be implemented to increase the technical challenge of the problem. For the 
+implementation of the game, the networking functionality of Unity will be used to support
+multiple players viewing the game world, and the META One as well as the Oculus Rift will
+be used in the project, the META One for the local players and the Oculus Rift for the
+remote players.
 	% Summarizes the Research Report and provides 
 	% an overview and conclusion of the technologies 
 	% we're going to use.
