Added 'journal' entry to Zagal article.
This solves a warning given by BibTeX.

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -22,9 +22,11 @@ year      = 2003
 
 % An article describing collaboration in games.
 @article{zagal,
-title  = "Collaborative games: lessons learned from board games.",
-author = "J.P. Zagal and J. Rick and I. Hsi",
-year   = 2006
+title   = "Collaborative games: lessons learned from board games.",
+author  = "J.P. Zagal and J. Rick and I. Hsi",
+journal = "Simulation & Gaming Vol.37 No.1",
+month   = "March",
+year    = 2006
 }
 @misc{uart,
 title  = "Unity AR Toolkit",
