Fixed unescaped '&' in Bibliography.

--- a/Reports/Research Report/Bibliography.bib
+++ b/Reports/Research Report/Bibliography.bib
@@ -24,7 +24,7 @@ year      = 2003
 @article{zagal,
 title   = "Collaborative games: lessons learned from board games.",
 author  = "J.P. Zagal and J. Rick and I. Hsi",
-journal = "Simulation & Gaming Vol.37 No.1",
+journal = "Simulation \& Gaming Vol.37 No.1",
 month   = "March",
 year    = 2006
 }
