--- a/Reports/Research Report/ProblemAnalysis.tex
+++ b/Reports/Research Report/ProblemAnalysis.tex
@@ -82,7 +82,7 @@
 			that the field of view of the virtual world is the same as that of the
 			physical world. Disadvantages are that we must be careful not to induce
 			any extra latency because that would result in the movements of the head
-			and of the view no longer matching up. Yet another disadvantage is that
+			and of the view no longer matching up. And the fact that
 			because the cameras are mounted on the front of the Oculus Rift, the
 			field of view of the physical world is limited.
 
@@ -204,7 +204,7 @@
 
 
 \section{Analysis Conclusions} \label{sec:analysisconclusion}
-We have looked at what type of headset we want to use either a Oculus rift with front mounted cameras or a META One. The advantage of the Oculus being more control over what is seen and the field of view of the virtual world matching that of the augmented world while the disadvantage is that latency can quickly become a problem. The META One meanwhile does not allow us to completely block something out and the field of view of the physical world is larger then that of the virtual world. We have also looked at whatever to use Vuforia, UART or Metaio for object tracking. 
+We have looked at what type of headset we want to use either a Oculus rift with front mounted cameras or a META One. The advantage of the Oculus being more control over what is seen and the field of view of the virtual world matching that of the augmented world while the disadvantage is that latency can quickly become a problem. The META One meanwhile does not allow us to completely block something out and the field of view of the physical world is larger then that of the virtual world. We have also looked at whatever to use Vuforia, UART or Metaio for object tracking, this is primarily a matter of what unity version we want to use.
 We also looked at the Interdependence between players and how asymmetry or overload in information or ability can be used to force cooperation we have also looked at various ways we can allow players to feel as they share the same space and how it helps to be able to communicate easily and notice another and how various points of view for the remote player influence this. We have seen how unity has some options for easily setting up networking. 
 % Provides the coices we made for the abovementioned problems along with a short
 % motivation based on the above analysis.
