Add longer abstract

--- a/Reports/Research Report/ResearchReport.tex
+++ b/Reports/Research Report/ResearchReport.tex
@@ -18,10 +18,14 @@
 \maketitle
 
 \begin{abstract}
-This report provides a detailed analysis of the problem formulation and a 
-proposal for a product that aims at solving that problem. This document 
-focuses on the research that has been done in analyzing the problem and the 
-results of that research.
+	This report describes the problem of developing a collaborative augmented
+	reality game. Each of the relevant technical details are analysed, like the
+	AR glasses for local players, VR solution for external players and other
+	components such as networking. This information is followed by proposed
+	solutions for the actual gameplay, after which the final idea is chosen
+	along with support for this choice. The report concludes with an overview
+	of the game and technical details and how they will tie together for the
+	final product.
 \end{abstract}
 
 \tableofcontents
