--- a/Reports/Research Report/ProblemFormulation.tex
+++ b/Reports/Research Report/ProblemFormulation.tex
@@ -12,14 +12,13 @@
 	expert remote crime scene investigators to guide local investigators in 
 	AR to collaboratively analyse the crime scene. 
 	
-	It has to be possible to play the game with at least three players: At 
-	least two players are present at the same location (physically 
-	co-located). At least one player is physically remote but virtually 
-	co-located \cite{bepsys}. The game itself should also be unable to be
-	completed without either the physically co-located players or the 
-	virtually co-located players, however this constraint could be relaxed
-	to allow a higher playability of the game (because it would be nice to
-	play the game without having to search for a virtually co-located player,
-	for example).
+	The game needs to support at least three players: At least two players are
+	present at the same location (physically co-located), each wearing AR
+	glasses. At least one player is physically remote but virtually co-located
+	using VR glasses \cite{bepsys}. It should be impossible, or at least
+	infeasible, to complete the game without involving the other party. However,
+	this constraint could be relaxed to allow a higher playability of the game.
+	It would be nice to still be able to play the game if no suitable virtually
+	co-located player can be found, for example.
 	
 	%TODO Add our interpretation to avoid ambiguities
